version mobile + calcul de l'âge sans gestion des bugs

--- a/style.css
+++ b/style.css
@@ -25,26 +25,24 @@ section{
     width: 55%;
     border-radius:5% 5% 35% 5%;
 }
-.form,.result{
-    margin: 20px 40px;
-}
+
 input{
     font-family: 'PoppinsB';
-    font-size: 32px;
+    font-size: 24px;
     border-radius: 7px;
     border: 1px solid hsl(0, 0%, 86%);
-    height:64px;
-    width:100%;
+    height:48px;
+    padding-left:20px;
+    width:90%;
 }
 input::placeholder, .form p{
     opacity: 0.7;
     color: hsl(0, 1%, 44%);
 }
-input::placeholder{
-    padding-left:20px;
-}
+
 .form{
     display:flex;
+    margin:20px 40px 0 40px;
     width:70%;
 }
 .form div{
@@ -60,6 +58,9 @@ input::placeholder{
     letter-spacing: 4px;
     margin-bottom: 5px;
 }
+.result{
+    margin: 20px 40px; 
+}
 .result div{
     display: flex;
 }
@@ -68,7 +69,7 @@ p{
     margin:0
 }
 .result p{
-    font-size:102px;
+    font-size:64px;
     
 }
 
@@ -100,3 +101,39 @@ span{
     margin-top:40px
 }
 
+@media screen and (max-width: 768px) {
+    section{
+        width: 90%;
+    }
+    .result{
+        margin-top: 60px;
+    }
+    .result p{
+        font-size: 40px;
+    }
+    .form{
+        width: 90%;
+        margin: 40px auto;
+        height: 74px;
+    }
+    .form div{
+        margin-right: 20px;
+    }
+    button{
+        position:absolute;
+        left:40%;
+    }
+    input{
+        height: 64px;
+        padding-left: 10px;
+    }
+    span{
+        width: 95%;
+        margin-left: 5%;
+        margin-right: 10%;
+    }
+    svg{
+        height:24px;
+        width: 26px;
+    }
+    }
